2.4-6:
  * Fix spurious udev error message
  * Resize root partition if /root.rw/aux/resize is present
  * Add parted
  * Add resize2fs utility
  * Kernel 4.1.19

2.4-5:
  * Fast contextualization detection, pinning in background
  * Kernel 4.1.13
  * add matching mount.vmhgfs to kernel

2.4-4:
  * Fix stack limitation for aufs_resolve_conflicts

2.4-2:
  * Kernel 4.1.10-6

2.4-0:
  * Update kernel to 4.1.10

2.3-4:
  * Update cctools

2.3-3:
  * Use customized command line for Azure images
  * Update cctools

2.3-2:
  * Update cctools

2.3-1:
  * Update cctools

2.3-0:
  * Docker: update parrot for fix of #919
  * Docker: look for x32 ELF interpreter
  * Add portprobe, sweepvm utility

2.2-1:
  * Fix signing script
  * Add Vagrant image format (VirtualBox based)
  * Kernel built with newer toolchain (support for x32 ABI)

2.2-0:
  * Force lazy inode initialization
  * e2fsprogs 1.42.12
  * Kernel 3.18.20
  * Support for Microsoft Azure

2.1-1:
  * Kernel 3.18.18, OpenAFS 1.6.11.1

2.1-0:
  * Add support for CloudStack

2.0-2:
  * Add cvmssh kernel command line switch
  * Use xz kernel for Amazon (PV-GRUB >= 1.04)
  * Add necessary kernel parameters for Docker

2.0-1:
  * More roaming-friendly cvmfs settings
  * Update cvmfs to 2.2.0 pre-release
  * Support ${ROOT_RW}/aux/cvmfs_force_tag for rollbacks
  * Kernel 3.18

1.18-15:
  * Add support for Realtek 8139 C+ NICs
  * Support static network initialization of eth0 from OpenNebula context 
    (CVM-705)
  * JSON signature for hdd and iso images (CVM-806)

1.18-14:
  * Add cernvm_inject contextualization
  * Add systemd initrd interface for shutdown
  * Add systemd.show_status=1 kernel parameter
  * Kernel 3.10.67
  * Add public key for cernvm-sl7.cern.ch
  * Cvmfs 2.1.20
  * Add CVMFS_HIDE_MAGIC_XATTRS=yes paramter

1.18-13:
  * Enforce 5 seconds timeout for initial NTP query

1.18-12:
  * Kernel 3.10.64

1.18-11:
  * Get time via NTP from pool.ntp.org
  * Enable file capabilities in aufs

1.18-10: