@@ -5,9 +5,9 @@ KERNEL_VANILLA_VERSION = 4.1.20
 KERNEL_CERNVM_RELEASE = 11
 BB_UPSTREAM_VERSION = 1.23.2
 BB_RELEASE = 2
-CURL_UPSTREAM_VERSION = 7.32.0
+CURL_UPSTREAM_VERSION = 7.48.0
 CURL_RELEASE = 1
-DROPBEAR_UPSTREAM_VERSION = 2015.67
+DROPBEAR_UPSTREAM_VERSION = 2016.73
 DROPBEAR_RELEASE = 1
 PATCHELF_UPSTREAM_VERSION = 0.8
 PATCHELF_RELEASE = 1
@@ -19,9 +19,9 @@ DHCLIENT_UPSTREAM_VERSION = 4.3.1
 DHCLIENT_RELEASE = 1
 E2FSPROGS_UPSTREAM_VERSION = 1.42.12
 E2FSPROGS_RELEASE = 2
-KEXEC_UPSTREAM_VERSION = 2.0.4
+KEXEC_UPSTREAM_VERSION = 2.0.12
 KEXEC_RELEASE = 1
-SFDISK_UPSTREAM_VERSION = 2.23
+SFDISK_UPSTREAM_VERSION = 2.27
 SFDISK_RELEASE = 1
 PARTED_UPSTREAM_VERSION = 3.2
 PARTED_RELEASE = 1
