@@ -1,3 +1,3 @@
 BB_SOURCETREE = busybox-$(BB_UPSTREAM_VERSION)
 BB_TARBALL = busybox-$(BB_UPSTREAM_VERSION).tar.bz2
-BB_SOURCE = http://busybox.net/downloads/$(BB_TARBALL)
+BB_SOURCE = https://busybox.net/downloads/$(BB_TARBALL)
